# cloudtrail-rs

./: .dockerignore  .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.test.yml
.github/: dependabot.yaml  release.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
crates/aws/: Cargo.toml
crates/aws/src/: http_client.rs  lib.rs  s3_config.rs  s3_store.rs  ssm_config.rs
crates/aws/tests/: ministack.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  metrics.rs  model.rs  pipeline.rs  ports.rs  testing.rs
crates/core/src/config/: file_source.rs  mod.rs  rules.rs  settings.rs  store.rs  uri.rs
crates/core/src/decode/: eventbridge.rs  mod.rs  s3.rs  sns.rs  sqs.rs
crates/core/src/filter/: engine.rs  index.rs  mod.rs  path.rs
crates/core/src/process/: buffer.rs  mod.rs  stream.rs
crates/core/tests/fixtures/: eventbridge-object-annotation-created.json  eventbridge-object-created-plus-key.json  eventbridge-object-created-unsupported-version.json  eventbridge-object-created.json  eventbridge-object-deleted.json  eventbridge-object-restore-completed.json  s3-event-object-created.json  s3-event-urlencoded-key.json  s3-test-event.json  sns-s3-event.json  sns-s3-test-event.json  sqs-batch-partial-garbage.json  sqs-s3-event.json  sqs-sns-event.json
crates/lambda-eventbridge/: Cargo.toml
crates/lambda-eventbridge/src/: main.rs
crates/lambda-eventbridge/tests/: handler.rs
crates/lambda-s3/: Cargo.toml
crates/lambda-s3/src/: main.rs
crates/lambda-s3/tests/: handler.rs
crates/lambda-sns/: Cargo.toml
crates/lambda-sns/src/: main.rs
crates/lambda-sns/tests/: handler.rs
crates/lambda-sqs/: Cargo.toml
crates/lambda-sqs/src/: main.rs
crates/lambda-sqs/tests/: handler.rs
docker/: Dockerfile.lambda
docs/: README.md  architecture.md  cli.md  configuration.md  deployment.md  development.md  rules.md
docs/plans/cloudtrail-rs/: PLAN.md  SHARED.md  STATUS.md  task-00-split-plan.md  task-01-toolchain-workspace.md  task-02-errors-model-ports.md  task-03-rules-parse-validate.md  task-04-field-path-resolution.md  task-05-rule-engine-linear.md  task-06-rule-index.md  task-07-settings.md  task-08-config-store.md  task-09-metrics-emf.md  task-10-decoders-s3-sns.md  task-11-decoders-sqs-eventbridge.md  task-12-buffer-processor.md  task-13-stream-processor.md  task-14-pipeline.md  task-15-aws-adapters.md  task-16-lambda-binaries.md  task-17-cli.md  task-18-ministack-integration.md  task-19-docs-examples.md
examples/: rules.example.yaml  settings.example.yaml
