[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/aws",
    "crates/lambda-s3",
    "crates/lambda-sqs",
    "crates/lambda-sns",
    "crates/lambda-eventbridge",
    "crates/cli",
]

[workspace.package]
license = "Apache-2.0"
# Application/internal crates — never published to crates.io. Marking them
# non-publishable also lets cargo-deny's allow-wildcard-paths exempt the
# internal path dependencies (crates.io disallows path deps on public crates).
publish = false

[profile.release]
opt-level = 3
# thin LTO + parallel codegen: ~95% of fat-LTO runtime perf at a fraction of the
# link time. With 11 build×target combos in the release pipeline, fat LTO +
# codegen-units=1 was the dominant cost. Slightly larger binaries.
lto = "thin"
codegen-units = 16
panic = "abort"
strip = "symbols"
