[package]
name = "cloudtrail-rs-aws"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
cloudtrail-rs-core = { path = "../core" }
async-trait = "0.1"
bytes = "1"
tokio = { version = "1", features = ["io-util"] }
tracing = "0.1"
aws-config = { version = "1", default-features = false }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-ring"] }
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"

[dev-dependencies]
cloudtrail-rs-core = { path = "../core", features = ["decode-s3"] }
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
aws-smithy-mocks = "0.3"
aws-sdk-s3 = { version = "1", default-features = false, features = ["test-util"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["test-util"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
