[package]
name = "cloudtrail-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudtrail-rs-core = { path = "../core" }
cloudtrail-rs-aws = { path = "../aws" }
anyhow = "1"
aws-config = { version = "1", default-features = false }
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
assert_cmd = "2"
