[package]
name = "cloudtrail-rs-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
decode-s3 = []
decode-sqs = []
decode-sns = []
decode-eventbridge = []
testing = []

[dependencies]
async-trait = "0.1"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
