[package]
name = "cloudtrail-rs-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish.workspace = true

[features]
default = []
decode-s3 = []
decode-sqs = []
decode-sns = []
decode-eventbridge = []
testing = []

[dependencies]
async-trait = "0.1"
bytes = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
percent-encoding = "2"
regex = "1.13.1"
semver = "1.0.28"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml_ng = "0.10.0"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "rt", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util", "time"] }
