[package]
name = "cloudtrail-rs-lambda-sqs"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudtrail-rs-core = { path = "../core", features = ["decode-sqs"] }
cloudtrail-rs-aws = { path = "../aws" }
anyhow = "1"
aws-config = { version = "1", default-features = false }
lambda_runtime = "1"
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
cloudtrail-rs-core = { path = "../core", features = ["decode-sqs", "testing"] }
flate2 = "1"
